--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,3 +1,12 @@
+/*------------ footer ------------*/
+.status-form {
+  display: none;
+}
+
+.register-form {
+  display: none;
+}
+
 form {
   label {
     display: block;
