--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,10 @@
+/*------------ footer ------------*/
+.status-form {
+  display: none; }
+
+.register-form {
+  display: none; }
+
 form label {
   display: block; }
 
