--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,3 +1,8 @@
+/*------------ imports ------------*/
+@import "_vars";
+@import "_mixins";
+@import "_general.scss";
+
 /*------------ footer ------------*/
 .status-form {
   display: none;
@@ -12,3 +17,6 @@ form {
     display: block;
   }
 }
+
+/*------------ imports ------------*/
+@import "_mediaqueries";
