--- a/sass/_vars.scss
+++ b/sass/_vars.scss
@@ -1,1 +1,48 @@
-$blue_table: #000;
+/*------------ colors ------------*/
+$white: #fff;
+$blue_table: rgba(90, 252, 255, 0.3);
+$gray_table: rgba(249, 242, 252, 0.79);
+$gray_thead: rgba(74, 71, 75, 0.83);
+$green: #5ab86b;
+$green_dark: #3a7443;
+
+/*------------ button ------------*/
+@mixin button($bg:$green, $color:$white, $hover:$green_dark) {
+  background-color: $green;
+  color: $color;
+  border: none;
+  padding: .5em .7em;
+  outline: none !important;
+  @include radius();
+  @include animate();
+  @include box-shadow(3px, 3px, 5px, 0, $hover);
+  &:hover {
+    background-color: $hover;
+  }
+  &:active {
+    box-shadow: none;
+  }
+}
+
+/*------------ placeholder ------------*/
+$placeholder-color: #808080;
+$required-color: #FFA500;
+$error_formfield-color: #008000;
+$error_message_block_bck: #FF0000;
+$error_message_block_color: #FF0000;
+
+::-webkit-input-placeholder {
+  color: $placeholder-color !important;
+}
+
+:-moz-placeholder {
+  color: $placeholder-color !important;
+}
+
+::-moz-placeholder {
+  color: $placeholder-color !important;
+}
+
+:-ms-input-placeholder {
+  color: $placeholder-color !important;
+}
