--- a/sass/_vars.scss
+++ b/sass/_vars.scss
@@ -1,5 +1,8 @@
 /*------------ colors ------------*/
 $white: #fff;
+$text: #303435;
+$text_hover: #336aae;
+$gray_header: rgba(223, 216, 226, 0.79);
 $blue_table: rgba(90, 252, 255, 0.3);
 $gray_table: rgba(249, 242, 252, 0.79);
 $gray_thead: rgba(74, 71, 75, 0.83);
@@ -13,6 +16,7 @@ $green_dark: #3a7443;
   border: none;
   padding: .5em .7em;
   outline: none !important;
+  line-height: 1.4em;
   @include radius();
   @include animate();
   @include box-shadow(3px, 3px, 5px, 0, $hover);
