--- a/sass/_vars.scss
+++ b/sass/_vars.scss
@@ -1,25 +1,28 @@
 /*------------ colors ------------*/
 $white: #fff;
 $text: #303435;
+$red: #e91c20;
 $text_hover: #336aae;
 $gray_header: rgba(223, 216, 226, 0.79);
 $blue_table: rgba(90, 252, 255, 0.3);
 $gray_table: rgba(249, 242, 252, 0.79);
 $gray_thead: rgba(74, 71, 75, 0.83);
+$yellow: #f5f41c;
+$yellow_dark: #d8d71a;
 $green: #5ab86b;
 $green_dark: #3a7443;
 
 /*------------ button ------------*/
 @mixin button($bg:$green, $color:$white, $hover:$green_dark) {
-  background-color: $green;
+  background-color: $bg;
   color: $color;
-  border: none;
   padding: .5em .7em;
   outline: none !important;
   line-height: 1.4em;
+  border: 1px solid $bg;
   @include radius();
   @include animate();
-  @include box-shadow(3px, 3px, 5px, 0, $hover);
+  @include box-shadow(2px, 2px, 5px, 0, $hover);
   &:hover {
     background-color: $hover;
   }
