--- a/sass/_general.scss
+++ b/sass/_general.scss
@@ -24,6 +24,22 @@ a {
   }
 }
 
+h2 {
+  font-size: 2.5em;
+}
+
+h3 {
+  font-size: 1.8em;
+}
+
+h4 {
+  font-size: 1.2em;
+}
+
+h2, h3, h4 {
+  text-align: center;
+}
+
 table {
   width: 100%;
   overflow: auto;
