--- a/sass/style.scss
+++ b/sass/style.scss
@@ -7,6 +7,7 @@
 .header {
   padding: 1.5em 0;
   background-color: $gray_header;
+  @include box-shadow(0, 1px, 5px, 0, $gray_thead);
   .wrapper {
     @include flex_display;
     @include flex_justify_content(space-between);
@@ -45,7 +46,7 @@
   #login-btn {
     @include button();
   }
-  #register-btn {
+  .register-btn {
     @include button($yellow, $text, $yellow_dark);
   }
   .error-msg {
@@ -56,6 +57,17 @@
 /*------------ main ------------*/
 .main {
   padding: 2em 0;
+}
+
+/*------------ user page ------------*/
+.user_page {
+  h3 {
+    margin: 2em 0;
+    line-height: 1.5em;
+    a {
+      color: $text_hover;
+    }
+  }
 }
 
 /*------------ footer ------------*/
