--- a/sass/_vars.scss
+++ b/sass/_vars.scss
@@ -2,6 +2,7 @@
 $white: #fff;
 $text: #303435;
 $red: #e91c20;
+$red_dark: #9e1618;
 $text_hover: #336aae;
 $gray_header: rgba(223, 216, 226, 0.79);
 $blue_table: rgba(90, 252, 255, 0.3);
