--- a/css/style.css
+++ b/css/style.css
@@ -20,7 +20,7 @@
   color: #808080 !important; }
 
 body {
-  font-size: 18px;
+  font-size: 16px;
   color: #303435;
   line-height: 1.4; }
 
@@ -53,7 +53,8 @@ h2, h3, h4 {
 
 table {
   width: 100%;
-  overflow: auto; }
+  overflow: auto;
+  font-size: 14px; }
   table thead {
     line-height: 1.2; }
     table thead tr {
@@ -81,7 +82,26 @@ table {
     padding: .5em;
     text-align: center; }
 
-form input[type=text] {
+form:after {
+  content: '';
+  display: block;
+  clear: both; }
+form label {
+  display: block;
+  width: 50%;
+  padding: 0 15px 1em 15px;
+  float: left; }
+  form label label {
+    display: inline-block;
+    width: auto;
+    padding: 0; }
+  form label span {
+    display: block;
+    margin-bottom: .3em; }
+form input[type=number],
+form input[type=text],
+form select {
+  width: 100%;
   padding: .5em .7em;
   border: 1px solid rgba(74, 71, 75, 0.83);
   line-height: 1.4em;
@@ -95,12 +115,60 @@ form input[type=text] {
   -moz-transition: all 0.5s ease 0s;
   -o-transition: all 0.5s ease 0s;
   transition: all 0.5s ease 0s; }
-  form input[type=text]:focus {
+  form input[type=number]:focus,
+  form input[type=text]:focus,
+  form select:focus {
     outline: none;
     border-color: #336aae;
     -webkit-box-shadow: 3px 3px 5px 0 #336aae;
     -moz-box-shadow: 3px 3px 5px 0 #336aae;
     box-shadow: 3px 3px 5px 0 #336aae; }
+form .form_buttons {
+  float: left;
+  width: 100%;
+  padding: 1em 15px;
+  text-align: center; }
+
+.popup {
+  font-size: 1.2em;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgba(0, 0, 0, 0.4); }
+  .popup_close {
+    position: absolute;
+    right: 15px;
+    top: 15px;
+    border: none;
+    background-color: #e91c20;
+    color: #fff;
+    padding: .4em;
+    line-height: 1em;
+    -webkit-border-radius: 50%;
+    -moz-border-radius: 50%;
+    border-radius: 50%;
+    -webkit-transition: all 0.5s ease 0s;
+    -moz-transition: all 0.5s ease 0s;
+    -o-transition: all 0.5s ease 0s;
+    transition: all 0.5s ease 0s; }
+    .popup_close i {
+      width: 1em;
+      height: 1em;
+      font-size: 1em;
+      line-height: 1em; }
+    .popup_close:hover {
+      background-color: #9e1618; }
+  .popup .form {
+    margin: 5% 0;
+    background-color: #fff;
+    padding: 2.5em 15px 1em 15px;
+    position: relative;
+    -webkit-border-radius: 0.5em;
+    -moz-border-radius: 0.5em;
+    border-radius: 0.5em; }
 
 /*------------ header ------------*/
 .header {
@@ -203,9 +271,6 @@ form input[type=text] {
 
 /*------------ footer ------------*/
 .status-form {
-  display: none; }
-
-.register-form {
   display: none; }
 
 form label {
