--- a/sass/_general.scss
+++ b/sass/_general.scss
@@ -1,5 +1,5 @@
 body {
-  font-size: 18px;
+  font-size: 16px;
   color: $text;
   line-height: 1.4;
 }
@@ -43,6 +43,7 @@ h2, h3, h4 {
 table {
   width: 100%;
   overflow: auto;
+  font-size: 14px;
   thead {
     line-height: 1.2;
     tr {
@@ -86,7 +87,30 @@ table {
 }
 
 form {
-  input[type=text] {
+  &:after {
+    content: '';
+    display: block;
+    clear: both;
+  }
+  label {
+    display: block;
+    width: 50%;
+    padding: 0 15px 1em 15px;
+    float: left;
+    label {
+      display: inline-block;
+      width: auto;
+      padding: 0;
+    }
+    span {
+      display: block;
+      margin-bottom: .3em;
+    }
+  }
+  input[type=number],
+  input[type=text],
+  select {
+    width: 100%;
     padding: .5em .7em;
     border: 1px solid $gray_thead;
     line-height: 1.4em;
@@ -98,5 +122,50 @@ form {
       border-color: $text_hover;
       @include box-shadow(3px, 3px, 5px, 0, $text_hover);
     }
+  }
+  .form_buttons {
+    float: left;
+    width: 100%;
+    padding: 1em 15px;
+    text-align: center;
+  }
+}
+
+.popup {
+  font-size: 1.2em;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgba(0, 0, 0, .4);
+  &_close {
+    position: absolute;
+    right: 15px;
+    top: 15px;
+    border: none;
+    background-color: $red;
+    color: $white;
+    padding: .4em;
+    line-height: 1em;
+    @include radius(50%);
+    @include animate();
+    i {
+      width: 1em;
+      height: 1em;
+      font-size: 1em;
+      line-height: 1em;
+    }
+    &:hover {
+      background-color: $red_dark;
+    }
+  }
+  .form {
+    margin: 5% 0;
+    background-color: $white;
+    padding: 2.5em 15px 1em 15px;
+    position: relative;
+    @include radius();
   }
 }
