--- a/sass/_vars.scss
+++ b/sass/_vars.scss
@@ -4,6 +4,7 @@ $text: #303435;
 $red: #e91c20;
 $red_dark: #9e1618;
 $text_hover: #336aae;
+$text_hover_dark: #244877;
 $gray_header: rgba(223, 216, 226, 0.79);
 $blue_table: rgba(90, 252, 255, 0.3);
 $gray_table: rgba(249, 242, 252, 0.79);
@@ -21,6 +22,7 @@ $green_dark: #3a7443;
   outline: none !important;
   line-height: 1.4em;
   border: 1px solid $bg;
+  font-weight: 600;
   @include radius();
   @include animate();
   @include box-shadow(2px, 2px, 5px, 0, $hover);
