--- a/css/style.css
+++ b/css/style.css
@@ -39,6 +39,10 @@ a {
   a:hover {
     color: #336aae; }
 
+h2, h3, h4 {
+  text-align: center;
+  margin: .5em; }
+
 h2 {
   font-size: 2.5em; }
 
@@ -47,9 +51,6 @@ h3 {
 
 h4 {
   font-size: 1.2em; }
-
-h2, h3, h4 {
-  text-align: center; }
 
 table {
   width: 100%;
@@ -86,18 +87,6 @@ form:after {
   content: '';
   display: block;
   clear: both; }
-form label {
-  display: block;
-  width: 50%;
-  padding: 0 15px 1em 15px;
-  float: left; }
-  form label label {
-    display: inline-block;
-    width: auto;
-    padding: 0; }
-  form label span {
-    display: block;
-    margin-bottom: .3em; }
 form input[type=number],
 form input[type=text],
 form select {
@@ -164,11 +153,35 @@ form .form_buttons {
   .popup .form {
     margin: 5% 0;
     background-color: #fff;
-    padding: 2.5em 15px 1em 15px;
+    padding: 3em 15px 1em 15px;
     position: relative;
     -webkit-border-radius: 0.5em;
     -moz-border-radius: 0.5em;
     border-radius: 0.5em; }
+
+button.new_wizard {
+  margin-top: .7em;
+  background-color: #336aae;
+  color: #fff;
+  padding: .5em .7em;
+  outline: none !important;
+  line-height: 1.4em;
+  border: 1px solid #336aae;
+  font-weight: 600;
+  -webkit-border-radius: 0.5em;
+  -moz-border-radius: 0.5em;
+  border-radius: 0.5em;
+  -webkit-transition: all 0.5s ease 0s;
+  -moz-transition: all 0.5s ease 0s;
+  -o-transition: all 0.5s ease 0s;
+  transition: all 0.5s ease 0s;
+  -webkit-box-shadow: 2px 2px 5px 0 #244877;
+  -moz-box-shadow: 2px 2px 5px 0 #244877;
+  box-shadow: 2px 2px 5px 0 #244877; }
+  button.new_wizard:hover {
+    background-color: #244877; }
+  button.new_wizard:active {
+    box-shadow: none; }
 
 /*------------ header ------------*/
 .header {
@@ -210,6 +223,7 @@ form .form_buttons {
       box-shadow: 0 3px 0 0 #336aae; }
 
 .header_enter form input {
+  width: auto;
   margin-right: .5em; }
 .header_enter form span {
   margin: 0 .5em; }
@@ -220,6 +234,7 @@ form .form_buttons {
   outline: none !important;
   line-height: 1.4em;
   border: 1px solid #5ab86b;
+  font-weight: 600;
   -webkit-border-radius: 0.5em;
   -moz-border-radius: 0.5em;
   border-radius: 0.5em;
@@ -241,6 +256,7 @@ form .form_buttons {
   outline: none !important;
   line-height: 1.4em;
   border: 1px solid #f5f41c;
+  font-weight: 600;
   -webkit-border-radius: 0.5em;
   -moz-border-radius: 0.5em;
   border-radius: 0.5em;
@@ -262,6 +278,10 @@ form .form_buttons {
 .main {
   padding: 2em 0; }
 
+.table_empty {
+  text-align: center;
+  color: #e91c20; }
+
 /*------------ user page ------------*/
 .user_page h3 {
   margin: 2em 0;
@@ -271,10 +291,98 @@ form .form_buttons {
 
 /*------------ footer ------------*/
 .status-form {
-  display: none; }
+  display: none;
+  text-align: center; }
+  .status-form label {
+    display: inline-block;
+    margin-right: .5em; }
+  .status-form .form {
+    width: 50%;
+    margin: 5% auto 5% auto; }
+  .status-form #choose_status {
+    background-color: #336aae;
+    color: #fff;
+    padding: .5em .7em;
+    outline: none !important;
+    line-height: 1.4em;
+    border: 1px solid #336aae;
+    font-weight: 600;
+    -webkit-border-radius: 0.5em;
+    -moz-border-radius: 0.5em;
+    border-radius: 0.5em;
+    -webkit-transition: all 0.5s ease 0s;
+    -moz-transition: all 0.5s ease 0s;
+    -o-transition: all 0.5s ease 0s;
+    transition: all 0.5s ease 0s;
+    -webkit-box-shadow: 2px 2px 5px 0 #244877;
+    -moz-box-shadow: 2px 2px 5px 0 #244877;
+    box-shadow: 2px 2px 5px 0 #244877; }
+    .status-form #choose_status:hover {
+      background-color: #244877; }
+    .status-form #choose_status:active {
+      box-shadow: none; }
 
-form label {
-  display: block; }
+.register-form {
+  display: none; }
+  .register-form #add_wizard {
+    margin-right: .5em;
+    background-color: #336aae;
+    color: #fff;
+    padding: .5em .7em;
+    outline: none !important;
+    line-height: 1.4em;
+    border: 1px solid #336aae;
+    font-weight: 600;
+    -webkit-border-radius: 0.5em;
+    -moz-border-radius: 0.5em;
+    border-radius: 0.5em;
+    -webkit-transition: all 0.5s ease 0s;
+    -moz-transition: all 0.5s ease 0s;
+    -o-transition: all 0.5s ease 0s;
+    transition: all 0.5s ease 0s;
+    -webkit-box-shadow: 2px 2px 5px 0 #244877;
+    -moz-box-shadow: 2px 2px 5px 0 #244877;
+    box-shadow: 2px 2px 5px 0 #244877; }
+    .register-form #add_wizard:hover {
+      background-color: #244877; }
+    .register-form #add_wizard:active {
+      box-shadow: none; }
+  .register-form #reset_wizard {
+    background-color: rgba(223, 216, 226, 0.79);
+    color: #303435;
+    padding: .5em .7em;
+    outline: none !important;
+    line-height: 1.4em;
+    border: 1px solid rgba(223, 216, 226, 0.79);
+    font-weight: 600;
+    -webkit-border-radius: 0.5em;
+    -moz-border-radius: 0.5em;
+    border-radius: 0.5em;
+    -webkit-transition: all 0.5s ease 0s;
+    -moz-transition: all 0.5s ease 0s;
+    -o-transition: all 0.5s ease 0s;
+    transition: all 0.5s ease 0s;
+    -webkit-box-shadow: 2px 2px 5px 0 rgba(74, 71, 75, 0.83);
+    -moz-box-shadow: 2px 2px 5px 0 rgba(74, 71, 75, 0.83);
+    box-shadow: 2px 2px 5px 0 rgba(74, 71, 75, 0.83); }
+    .register-form #reset_wizard:hover {
+      background-color: rgba(74, 71, 75, 0.83); }
+    .register-form #reset_wizard:active {
+      box-shadow: none; }
+    .register-form #reset_wizard:hover {
+      color: rgba(249, 242, 252, 0.79); }
+  .register-form form label {
+    display: block;
+    width: 50%;
+    padding: 0 15px 1em 15px;
+    float: left; }
+    .register-form form label label {
+      display: inline-block;
+      width: auto;
+      padding: .5em .7em; }
+    .register-form form label span {
+      display: block;
+      margin-bottom: .3em; }
 
 /*------------ imports ------------*/
 
