--- a/css/style.css
+++ b/css/style.css
@@ -280,7 +280,9 @@ button.new_wizard {
 
 .table_empty {
   text-align: center;
-  color: #e91c20; }
+  color: #e91c20;
+  background-color: rgba(249, 242, 252, 0.79);
+  font-weight: bold; }
 
 /*------------ user page ------------*/
 .user_page h3 {
