--- a/sass/style.scss
+++ b/sass/style.scss
@@ -63,6 +63,8 @@
 .table_empty {
   text-align: center;
   color: $red;
+  background-color: $gray_table;
+  font-weight: bold;
 }
 
 /*------------ user page ------------*/
