user page styles

--- a/sass/_vars.scss
+++ b/sass/_vars.scss
@@ -9,6 +9,7 @@ $gray_header: rgba(223, 216, 226, 0.79);
 $blue_table: rgba(90, 252, 255, 0.3);
 $gray_table: rgba(249, 242, 252, 0.79);
 $gray_thead: rgba(74, 71, 75, 0.83);
+$gray_user: rgba(74, 71, 75, 0.4);
 $yellow: #f5f41c;
 $yellow_dark: #d8d71a;
 $green: #5ab86b;
