--- a/css/style.css
+++ b/css/style.css
@@ -285,11 +285,40 @@ button.new_wizard {
   font-weight: bold; }
 
 /*------------ user page ------------*/
-.user_page h3 {
-  margin: 2em 0;
-  line-height: 1.5em; }
-  .user_page h3 a {
-    color: #336aae; }
+.user_page {
+  text-align: center; }
+  .user_page #edit {
+    margin-top: .7em;
+    background-color: #336aae;
+    color: #fff;
+    padding: .5em .7em;
+    outline: none !important;
+    line-height: 1.4em;
+    border: 1px solid #336aae;
+    font-weight: 600;
+    -webkit-border-radius: 0.5em;
+    -moz-border-radius: 0.5em;
+    border-radius: 0.5em;
+    -webkit-transition: all 0.5s ease 0s;
+    -moz-transition: all 0.5s ease 0s;
+    -o-transition: all 0.5s ease 0s;
+    transition: all 0.5s ease 0s;
+    -webkit-box-shadow: 2px 2px 5px 0 #244877;
+    -moz-box-shadow: 2px 2px 5px 0 #244877;
+    box-shadow: 2px 2px 5px 0 #244877; }
+    .user_page #edit:hover {
+      background-color: #244877; }
+    .user_page #edit:active {
+      box-shadow: none; }
+  .user_page h3 {
+    margin: 2em 0;
+    line-height: 1.5em; }
+    .user_page h3 a {
+      color: #336aae; }
+  .user_page table tr td:first-child {
+    background-color: rgba(74, 71, 75, 0.4);
+    color: #fff;
+    font-weight: bold; }
 
 /*------------ footer ------------*/
 .status-form {
@@ -326,8 +355,7 @@ button.new_wizard {
 
 .register-form {
   display: none; }
-  .register-form #add_wizard,
-  .register-form #update_wizard {
+  .register-form #add_wizard {
     margin-right: .5em;
     background-color: #336aae;
     color: #fff;
@@ -346,11 +374,9 @@ button.new_wizard {
     -webkit-box-shadow: 2px 2px 5px 0 #244877;
     -moz-box-shadow: 2px 2px 5px 0 #244877;
     box-shadow: 2px 2px 5px 0 #244877; }
-    .register-form #add_wizard:hover,
-    .register-form #update_wizard:hover {
+    .register-form #add_wizard:hover {
       background-color: #244877; }
-    .register-form #add_wizard:active,
-    .register-form #update_wizard:active {
+    .register-form #add_wizard:active {
       box-shadow: none; }
   .register-form #reset_wizard {
     background-color: rgba(223, 216, 226, 0.79);
@@ -376,8 +402,6 @@ button.new_wizard {
       box-shadow: none; }
     .register-form #reset_wizard:hover {
       color: #fff; }
-  .register-form #update_wizard {
-    display: none; }
   .register-form form label {
     display: block;
     width: 50%;
